--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     </head>
     <body>
         <h1>Hello World</h1>
-        <audio controls autoplay muted>
+        <audio controls>
             <source src="horse.ogg" type="audio/ogg">
-            <source src="horse.mp3" type="audio/mpeg">
         </audio>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/K_zylJH4PRI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <video width="320" height="240" controls>
