--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
     <head>
         <title>Hello World</title>
+        <script src="http://api.html5media.info/1.1.8/html5media.min.js"></script>
     </head>
     <body>
         <h1>Hello World</h1>
-        <audio controls>
-            <source src="horse.ogg" type="audio/ogg">
-        </audio>
+        <audio src="horse.ogv" controls preload></audio>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/K_zylJH4PRI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <video width="320" height="240" controls>
             <source src="tiktok.mp4" type="video/mp4">
