--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <body>
         <h1>Hello World</h1>
         <audio src="horse.ogg" controls preload></audio>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/K_zylJH4PRI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <video width="320" height="240" controls>
-            <source src="tiktok.mp4" type="video/mp4">
-        </video>
-</body>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/K_zylJH4PRI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div>    
+            <video width="320" height="240" controls>
+                <source src="tiktok.mp4" type="video/mp4">
+            </video>
+        </div>
+    </body>
 </html>
