--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -63,8 +63,8 @@
     <!-- end sw-rss-feed code -->
 </head>
 <body>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/B6_iQvaIjXw?start=180&loop=1&color=white" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <audio src="horse.ogg" controls preload></audio>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/B6_iQvaIjXw?start=180&loop=1&color=purple" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <audio src="horse.ogv" controls preload></audio>
     <video width="560" height="315" controls>
         <source src="tiktok.mp4" type="video/mp4">
     </video>
