--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -3,7 +3,6 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Welcome to my page!!!!</title>
     <script src="http://api.html5media.info/1.1.8/html5media.min.js"></script>
     <style>
         .box {
@@ -63,7 +62,8 @@
     <!-- end sw-rss-feed code -->
 </head>
 <body>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/B6_iQvaIjXw?start=180&loop=1&color=purple" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h1>Welcome to my page!!!!</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/B6_iQvaIjXw?start=180&loop=1&color=white" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <audio src="horse.ogv" controls preload></audio>
     <video width="560" height="315" controls>
         <source src="tiktok.mp4" type="video/mp4">
