--- a/someCss.html
+++ b/someCss.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 <title>HTML Tags</title>
+<link rel="stylesheet" type="text/css" href="anExternal.css">
 </head>
 <body>
     <h1>Level 3</h1>
