--- a/someCss.html
+++ b/someCss.html
@@ -8,11 +8,22 @@
     <h1>Level 3</h1>
     <p class="p1"><span>P</span>erfume is a mixture of fragrant essential oils and aroma compounds, fixatives, and solvents used to
         give the human body, objects, and living spaces a pleasant smell.Perfume comes from the Latin “per”
-        meaning “through” and “fumum,” or “smoke.”</p>
-    <p class="p2">Many ancient perfumes were made by extracting
+        meaning “through” and “fumum,” or “smoke.” Many ancient perfumes were made by extracting
         natural oils from plants through pressing and steaming. The oil was then burned to scent the air. Today,
         most perfume is used to scent bar soaps. Some products are even perfumed with industrial odorants to
         mask unpleasant smells or to appear “unscented.”</p>
+    <p class="p2">erfumers evaluate the bottom (base) notes and the tenacity of the fragrance during this
+        stage. Fixative: A material used in a perfume to “fix” the perfume or make it last longer. Fixatives may
+        be simply materials that are relatively longer lasting than the other components or they may have some
+        physical or chemical effect of forming bonds with the other materials. Lift: The impact of fragrance
+        highly diffusive fragrances has a good “lift”. Middle (heart) Note: The core of a perfume composition
+        which gives it its character the middle or “heart” note makes up the main part of a fragrance and
+        determines the classification or fragrance family. Note(s): One of three distinct periods in the
+        evaporation of a perfume, (see: top note, middle note, bottom note). This also indicates an olfactory
+        impression of a single smell. Strength: The intensity of the fragrance Thread: The term “common” thread describes a fragrance’s ability to flow from one phase to another in a cohesive rather than a discordant
+        fashion. Top Note: The impression of a fragrance when first smelled or applied to the skin usually the
+        most volatile ingredients in a perfume the materials in the formulation that show themselves in the first
+        stages of evaporation Volatility: The degree in which a component freely diffuses into the atmosphere</p>
     <img src="https://cdn.fragrancenet.com/images/photos/600x600/288145.jpg" title="Creed Aventus"/>
 
 </body>
