--- a/someCss.html
+++ b/someCss.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="anExternal.css">
 </head>
 <body>
-    <h1>Level 3</h1>
+    <div style="border: dotted 1px black" id="mydiv">Level 3</div> 
     <p class="p1"><span>P</span>erfume is a mixture of fragrant essential oils and aroma compounds, fixatives, and solvents used to
         give the human body, objects, and living spaces a pleasant smell.Perfume comes from the Latin “per”
         meaning “through” and “fumum,” or “smoke.” Many ancient perfumes were made by extracting
