--- a/index.html
+++ b/index.html
@@ -1,16 +1,60 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Hello World</title>
-        <script src="http://api.html5media.info/1.1.8/html5media.min.js"></script>
-    </head>
-    <body>
-        <h1>Hello World</h1>
-        
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/K_zylJH4PRI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <audio src="horse.ogv" controls preload></audio>
-        <video width="560" height="315" controls>
-            <source src="tiktok.mp4" type="video/mp4">
-        </video>
-    </body>
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>My Fun Site</title>
+<meta charset="utf-8">
+<link type="text/css" rel="stylesheet" href="styles/style.css" />
+<link type="text/css" rel="stylesheet" href="styles/skin.css" />
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery.jcarousel.min.js"></script>
+<script type="text/javascript" src="js/initSlider.js"></script>
+<!--[if IE 6]>
+<script src="js/ie6-transparency.js"></script>
+<script>DD_belatedPNG.fix('#header img, #featured-section h2, #circles img, #frontpage-sidebar .read-more, .blue-bullets li, #sidebar .sidebar-button, #project-content .read-more, .more-link, #contact-form .submit, .jcarousel-skin-tango .jcarousel-next-horizontal, .jcarousel-skin-tango .jcarousel-prev-horizontal, #commentform .submit');</script>
+<style>body { behavior: url("styles/ie6-hover-fix.htc"); }</style>
+<link rel="stylesheet" href="styles/ie6.css" />
+<![endif]-->
+<!--[if IE 7]><link rel="stylesheet" href="styles/ie7.css" /><![endif]-->
+<!--[if IE 8]><link rel="stylesheet" href="styles/ie8.css" /><![endif]-->
+</head>
+<body class="home">
+<div id="wrap">
+  <div id="header"> <img width="308" height="80" src="images/logo.png" />
+    <div id="nav">
+      <ul class="menu">
+        <li class="current_page_item"><a href="index.html">Home</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="articles.html">Articles</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+    <!--end nav-->
+  </div>
+  <!--end header-->
+  <div id="featured-section">
+    <h2>We design original and effective online experiences</h2>
+    <div id="circles"> <img class="first" src="images/circle-red1.png" /> <img src="images/circle-pink.png" /> <img src="images/circle-orange.png" /> <img src="images/circle-yellow.png" /> </div>
+    <!--end circles-->
+    <div id="image-slider">
+      <ul id="mycarousel" class="jcarousel-skin-tango">
+        <li class="first"><a href="#"><img width="280" height="190" src="aurora.jpg" alt="" /></a></li>
+        <li><a href="#"><img width="280" height="190" src="australia.jpg" alt="" /></a></li>
+        <li><a href="#"><img width="280" height="190" src="bird.jpg" alt="" /></a></li>
+        <li class="first"><a href="#"><img width="280" height="190" src="color.jpg" alt="" /></a></li>
+        <li><a href="#"><img width="280" height="190" src="landscape.jpg" alt="" /></a></li>
+        <li><a href="#"><img width="280" height="190" src="nature.jpg" alt="" /></a></li>
+        <li class="first"><a href="#"><img width="280" height="190" src="phone.png" alt="" /></a></li>
+        <li><a href="#"><img width="280" height="190" src="tree.jpg" alt="" /></a></li>
+        <li><a href="#"><img width="280" height="190" src="lap.jpg" alt="" /></a></li>
+      </ul>
+    </div>
+    <!--end image-slider-->
+  </div>
+  
+  
+</div>
+<!--end wrap-->
+</body>
+<div class="cache-images"><img src="images/red-button-bg.png" width="0" height="0" alt="" /><img src="images/black-button-bg.png" width="0" height="0" alt="" /></div>
+<!--end cache-images-->
 </html>
