--- a/articles.html
+++ b/articles.html
@@ -18,7 +18,7 @@
   <div id="header"> <img  width="308" height="80" src="images/logo.png" />
     <div id="nav">
       <ul class="menu">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="myFunSite.html">Home</a></li>
         
         <li><a href="portfolio.html">Portfolio</a></li>
         <li class="current_page_item"><a href="articles.html">Articles</a></li>
