--- a/myFunSite.html
+++ b/myFunSite.html
@@ -22,7 +22,7 @@
   <div id="header"> <img width="308" height="80" src="images/logo.png" />
     <div id="nav">
       <ul class="menu">
-        <li class="current_page_item"><a href="index.html">Home</a></li>
+        <li class="current_page_item"><a href="myFunSite.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="articles.html">Articles</a></li>
         <li><a href="contact.html">Contact</a></li>
