--- a/myFunSite.html
+++ b/myFunSite.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<!-- saved from url=(0064)file:///T:/Info%20101/Classwork/Builder/myFunSite/myFunSite.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
 <title>My Fun Site</title>
-
-<link type="text/css" rel="stylesheet" href="./myFunSite_files/style.css">
-<link type="text/css" rel="stylesheet" href="./myFunSite_files/skin.css">
-<script type="text/javascript" src="./myFunSite_files/jquery.min.js.download"></script>
-<script type="text/javascript" src="./myFunSite_files/jquery.jcarousel.min.js.download"></script>
-<script type="text/javascript" src="./myFunSite_files/initSlider.js.download"></script>
+<meta charset="utf-8">
+<link type="text/css" rel="stylesheet" href="styles/style.css" />
+<link type="text/css" rel="stylesheet" href="styles/skin.css" />
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery.jcarousel.min.js"></script>
+<script type="text/javascript" src="js/initSlider.js"></script>
 <!--[if IE 6]>
 <script src="js/ie6-transparency.js"></script>
 <script>DD_belatedPNG.fix('#header img, #featured-section h2, #circles img, #frontpage-sidebar .read-more, .blue-bullets li, #sidebar .sidebar-button, #project-content .read-more, .more-link, #contact-form .submit, .jcarousel-skin-tango .jcarousel-next-horizontal, .jcarousel-skin-tango .jcarousel-prev-horizontal, #commentform .submit');</script>
@@ -19,13 +19,13 @@
 </head>
 <body class="home">
 <div id="wrap">
-  <div id="header"> <img width="308" height="80" src="./myFunSite_files/logo.png">
+  <div id="header"> <img width="308" height="80" src="images/logo.png" />
     <div id="nav">
       <ul class="menu">
-        <li class="current_page_item"><a href="file:///T:/Info%20101/Classwork/Builder/myFunSite/myFunSite.html">Home</a></li>
-        <li><a href="file:///T:/Info%20101/Classwork/Builder/myFunSite/portfolio.html">Portfolio</a></li>
-        <li><a href="file:///T:/Info%20101/Classwork/Builder/myFunSite/articles.html">Articles</a></li>
-        <li><a href="file:///T:/Info%20101/Classwork/Builder/myFunSite/contact.html">Contact</a></li>
+        <li class="current_page_item"><a href="myFunSite.html">Home</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="articles.html">Articles</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
     <!--end nav-->
@@ -33,20 +33,20 @@
   <!--end header-->
   <div id="featured-section">
     <h2>We design original and effective online experiences</h2>
-    <div id="circles"> <img class="first" src="./myFunSite_files/circle-red1.png"> <img src="./myFunSite_files/circle-pink.png"> <img src="./myFunSite_files/circle-orange.png"> <img src="./myFunSite_files/circle-yellow.png"> </div>
+    <div id="circles"> <img class="first" src="images/circle-red1.png" /> <img src="images/circle-pink.png" /> <img src="images/circle-orange.png" /> <img src="images/circle-yellow.png" /> </div>
     <!--end circles-->
     <div id="image-slider">
-      <div class=" jcarousel-skin-tango"><div class="jcarousel-container jcarousel-container-horizontal" style="position: relative; display: block;"><div class="jcarousel-clip jcarousel-clip-horizontal" style="overflow: hidden; position: relative;"><ul id="mycarousel" class="jcarousel-list jcarousel-list-horizontal" style="overflow: hidden; position: relative; top: 0px; left: 0px; margin: 0px; padding: 0px; width: 2466px;">
-        <li class="first jcarousel-item jcarousel-item-horizontal jcarousel-item-1 jcarousel-item-1-horizontal" jcarouselindex="1" style="float: left; list-style: none; width: 274px;"><a href="file:///T:/Info%20101/Classwork/Builder/myFunSite/myFunSite.html#"><img width="280" height="190" src="./myFunSite_files/aurora.jpg" alt=""></a></li>
-        <li class="jcarousel-item jcarousel-item-horizontal jcarousel-item-2 jcarousel-item-2-horizontal" jcarouselindex="2" style="float: left; list-style: none; width: 274px;"><a href="file:///T:/Info%20101/Classwork/Builder/myFunSite/myFunSite.html#"><img width="280" height="190" src="./myFunSite_files/australia.jpg" alt=""></a></li>
-        <li class="jcarousel-item jcarousel-item-horizontal jcarousel-item-3 jcarousel-item-3-horizontal" jcarouselindex="3" style="float: left; list-style: none; width: 274px;"><a href="file:///T:/Info%20101/Classwork/Builder/myFunSite/myFunSite.html#"><img width="280" height="190" src="./myFunSite_files/bird.jpg" alt=""></a></li>
-        <li class="first jcarousel-item jcarousel-item-horizontal jcarousel-item-4 jcarousel-item-4-horizontal" jcarouselindex="4" style="float: left; list-style: none; width: 274px;"><a href="file:///T:/Info%20101/Classwork/Builder/myFunSite/myFunSite.html#"><img width="280" height="190" src="./myFunSite_files/color.jpg" alt=""></a></li>
-        <li class="jcarousel-item jcarousel-item-horizontal jcarousel-item-5 jcarousel-item-5-horizontal" jcarouselindex="5" style="float: left; list-style: none; width: 274px;"><a href="file:///T:/Info%20101/Classwork/Builder/myFunSite/myFunSite.html#"><img width="280" height="190" src="./myFunSite_files/landscape.jpg" alt=""></a></li>
-        <li class="jcarousel-item jcarousel-item-horizontal jcarousel-item-6 jcarousel-item-6-horizontal" jcarouselindex="6" style="float: left; list-style: none; width: 274px;"><a href="file:///T:/Info%20101/Classwork/Builder/myFunSite/myFunSite.html#"><img width="280" height="190" src="./myFunSite_files/nature.jpg" alt=""></a></li>
-        <li class="first jcarousel-item jcarousel-item-horizontal jcarousel-item-7 jcarousel-item-7-horizontal" jcarouselindex="7" style="float: left; list-style: none; width: 274px;"><a href="file:///T:/Info%20101/Classwork/Builder/myFunSite/myFunSite.html#"><img width="280" height="190" src="./myFunSite_files/phone.png" alt=""></a></li>
-        <li class="jcarousel-item jcarousel-item-horizontal jcarousel-item-8 jcarousel-item-8-horizontal" jcarouselindex="8" style="float: left; list-style: none; width: 274px;"><a href="file:///T:/Info%20101/Classwork/Builder/myFunSite/myFunSite.html#"><img width="280" height="190" src="./myFunSite_files/tree.jpg" alt=""></a></li>
-        <li class="jcarousel-item jcarousel-item-horizontal jcarousel-item-9 jcarousel-item-9-horizontal" jcarouselindex="9" style="float: left; list-style: none; width: 274px;"><a href="file:///T:/Info%20101/Classwork/Builder/myFunSite/myFunSite.html#"><img width="280" height="190" src="./myFunSite_files/lap.jpg" alt=""></a></li>
-      </ul></div><div class="jcarousel-prev jcarousel-prev-horizontal jcarousel-prev-disabled jcarousel-prev-disabled-horizontal" disabled="true" style="display: block;"></div><div class="jcarousel-next jcarousel-next-horizontal" disabled="false" style="display: block;"></div></div></div>
+      <ul id="mycarousel" class="jcarousel-skin-tango">
+        <li class="first"><a href="#"><img width="280" height="190" src="aurora.jpg" alt="" /></a></li>
+        <li><a href="#"><img width="280" height="190" src="australia.jpg" alt="" /></a></li>
+        <li><a href="#"><img width="280" height="190" src="bird.jpg" alt="" /></a></li>
+        <li class="first"><a href="#"><img width="280" height="190" src="color.jpg" alt="" /></a></li>
+        <li><a href="#"><img width="280" height="190" src="landscape.jpg" alt="" /></a></li>
+        <li><a href="#"><img width="280" height="190" src="nature.jpg" alt="" /></a></li>
+        <li class="first"><a href="#"><img width="280" height="190" src="phone.png" alt="" /></a></li>
+        <li><a href="#"><img width="280" height="190" src="tree.jpg" alt="" /></a></li>
+        <li><a href="#"><img width="280" height="190" src="lap.jpg" alt="" /></a></li>
+      </ul>
     </div>
     <!--end image-slider-->
   </div>
@@ -54,7 +54,7 @@
   
 </div>
 <!--end wrap-->
-
-<div class="cache-images"><img src="./myFunSite_files/red-button-bg.png" width="0" height="0" alt=""><img src="./myFunSite_files/black-button-bg.png" width="0" height="0" alt=""></div>
+</body>
+<div class="cache-images"><img src="images/red-button-bg.png" width="0" height="0" alt="" /><img src="images/black-button-bg.png" width="0" height="0" alt="" /></div>
 <!--end cache-images-->
-</body></html>
+</html>
